Fix font-size so smallest screens text don't jump around when text is added to status field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ body {
 
 /* Middle section styles */
 #game-field {
+    font-size: small;
     color: white;
     background-color: #4C607A;
     border: 4px solid white;
@@ -64,21 +65,20 @@ body {
     flex-grow: 2;
 }
 
-/* Player hand section styles*/
+/* Player hand section styles */
 #player-side {
     margin: 26px;
+    text-align: center;
 }
 
 /* Keeps the free floating buttons centered */
 .button-container {
-    position: relative;
     width: 100%;
-    height: 30px;
+    height: 35px;
 }
 
 #start-button {
     font-family: 'Source Code Pro', sans-serif;
-    font-size: medium;
     margin: auto;
     padding: 5px;
 }
@@ -119,7 +119,6 @@ body {
 
 #play-card-button {
     font-family: 'Source Code Pro', sans-serif;
-    font-size: medium;
     margin: auto;
     padding: 5px;
 }
@@ -134,6 +133,10 @@ body {
 
 /* Changes for less small screens above 480px, below 768px*/
 @media screen and (min-width:480px) {
+    #game-field {
+        font-size: medium;
+    }
+    
     .card {
         font-size: medium;
         height: 150px;
